# HTTPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  devenv.yml
.github/workflows/: ccpp.yml
src/: .gdb_history  CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt  errors.h  header.cpp  header.h  http.cpp  http.h  https.cpp  https.h  request.cpp  request.h  response.cpp  response.h  socket.cpp  socket.h  url.cpp  url.h
src/network/cookies/: CMakeLists.txt  cookie.cpp  cookie.h  cookies.h
src/network/socket/: CMakeLists.txt  baseSocket.h  secure.cpp  secure.h  socket.cpp  socket.h
src/utils/: split.h
test/: tests.cpp
